--- a/src/gtworld.html
+++ b/src/gtworld.html
@@ -71,12 +71,12 @@
         </section>
 
         <section class="gtworld mt-10">
-            <img src="../assets/images/welcome image.png" alt="">
+            <div class="about-gtbank space-y-5">
+                <a href="../assets/images/welcome image.png"><img src="../assets/images/welcome image.png" alt=""></a>
 
-            <div class="about">
-                <p class="font-caudex text-white text-2xl lg:py-10">About GTBank</p>
+                <p class="about-gtworld-header-text font-caudex text-white text-xl lg:text-2xl lg:py-10">About GTBank</p>
 
-                <p class="about-gt-deats gt-deats">
+                <p class="about-gtworld-details-text font-sf text-primary text-sm">
                     The bank’s reliable conveyance of innovative financial arrangements and excellent client support has
                     empowered it to
                     record yearly development in the number of customers and key financial files since the beginning.
@@ -100,7 +100,7 @@
                     transactions.
                 </p>
 
-                <p class="about-gt-deats gt-deats lg:mt-10">
+                <p class="about-gtworld-details-text font-sf text-primary text-sm lg:mt-10">
                     Gtbank today is one of the top 5 banks in Nigeria and undoubtedly has the largest youth
                     concentration in
                     Nigeria and one
@@ -116,10 +116,10 @@
                 </p>
             </div>
 
-            <div class="goal lg:py-40">
-                <p class="font-caudex text-white text-2xl">Goal</p>
+            <div class="goal mt-24 space-y-5">
+                <p class="goal-header-text font-caudex text-white text-xl lg:text-2xl">Goal</p>
 
-                <ol class="list-decimal gt-deats lg:mt-10 lg:ml-5">
+                <ol class="list-decimal ml-4 font-sf text-primary text-sm lg:mt-10 lg:ml-5">
                     <li>Identify usability issues through research.</li>
                     <li>Create and validate Assumptions.</li>
                     <li>Improve the design and user experience.</li>
@@ -128,16 +128,18 @@
                 </ol>
             </div>
 
-            <div class="design-process">
-                <p class="font-caudex text-white text-2xl">Design process</p>
+            <div class="design-process mt-24 space-y-5">
+                <p class="design-process-header-text font-caudex text-white text-xl lg:text-2xl">Design process</p>
 
-                <img src="../assets/images/design process.png" alt="" class="lg:mt-8">
+                <div class="design-process-image">
+                    <a href="../assets/images/design process.png"><img src="../assets/images/design process.png" alt="" class="lg:mt-8"></a>
+                </div>
             </div>
 
-            <div class="dicovering-problem lg:my-40">
-                <p class="font-caudex text-white text-2xl">Descovering the problem</p>
+            <div class="dicovering-the-problem mt-24 space-y-5">
+                <p class="dicovering-the-problem-header-text font-caudex text-white text-xl lg:text-2xl">Descovering the problem</p>
 
-                <p class="discovering-the-problem-deats gt-deats lg:mt-10">
+                <p class="discovering-the-problem-details-text font-sf text-primary text-sm lg:mt-10">
                     A user-friendly app is meant to be learnable with the smallest effort invested, unfortunately, the
                     GTWorld app is a bit
                     difficult to use, especially when looking for new features to explore. While I was using the app, I
@@ -153,7 +155,7 @@
                     reported by users are listed below:
                 </p>
 
-                <ol class="list-decimal gt-deats lg:mt-10 lg:ml-5">
+                <ol class="list-decimal ml-4 font-sf text-primary text-sm lg:mt-10 lg:ml-5">
                     <li>Increased volume of transactional errors.</li>
                     <li>The app goes blank and that gets users confused.</li>
                     <li>Navigating around the app is tasking.</li>
@@ -162,13 +164,15 @@
                     <li>Other issues include Typography, colors and visual hierarchy</li>
                 </ol>
 
-                <p class="font-caudex text-white text-lg lg:mt-10">Here are some customer reviews on the Google app
-                    store
+                <p class="customer-reviews-header-text font-caudex text-white text-lg pt-5 lg:mt-10">
+                    Here are some customer reviews on the Google app store
                 </p>
 
-                <img class="lg:my-7" src="../assets/images/customer reviews.png" alt="">
+                <div class="customer-reviews-image">
+                    <a href="../assets/images/customer reviews.png"><img class="lg:my-7" src="../assets/images/customer reviews.png" alt=""></a>
+                </div>
 
-                <p class="gt-deats">
+                <p class="in-addition-text font-sf text-primary text-sm">
                     In addition to this, I also set simple tasks for the users to perform to know if they will be able
                     to
                     seamlessly perform
@@ -179,16 +183,16 @@
                     discovered these pain points during the course of the interview.
                 </p>
 
-                <ol class="list-decimal gt-deats lg:my-10 lg:ml-5">
+                <ol class="list-decimal ml-4 font-sf text-primary text-sm lg:my-10 lg:ml-5">
                     <li>Users had to pause once they are successfully logged in to find menu options despite using the
-                        application <br> before.</li>
+                        application before.</li>
                     <li>Users reportedly conmplained about some part of the app going blank whenever you click on text
                         fields.
                     </li>
                     <li>The payment page doesn't seem to be intuitive</li>
                 </ol>
 
-                <p class="gt-deats">
+                <p class="further-addition-text font-sf text-primary text-sm">
                     To further validate my research, I went on to the google play store app to check out what users of
                     the
                     app
@@ -197,10 +201,10 @@
                 </p>
             </div>
 
-            <div class="who-are-the-users lg:mb-40">
-                <p class="font-caudex text-white text-2xl">Who are the users</p>
+            <div class="who-are-the-users mt-24 space-y-5">
+                <p class="font-caudex text-white text-xl lg:text-2xl">Who are the users</p>
 
-                <p class="gt-deats lg:mt-10 lg:mb-7">
+                <p class="font-sf text-primary text-sm lg:mt-10 lg:mb-7">
                     Based on the interviews I carried out, I was able to draw out two different kinds of users on my
                     mobile
                     app and they are
@@ -212,7 +216,7 @@
                     <img src="../assets/images/customer jane.png" alt="">
                 </div>
 
-                <ol class="list-decimal gt-deats lg:mt-10 lg:ml-5">
+                <ol class="list-decimal ml-4 font-sf text-primary text-sm lg:mt-10 lg:ml-5">
                     <li>The home screen experience.</li>
                     <li>Create a flow in which AR feature will be functional.</li>
                     <li>Improve the major UI components of the app to suit the futuristic design.</li>
@@ -221,9 +225,9 @@
             </div>
 
             <div class="solution">
-                <p class="font-caudex text-white text-2xl">Solution</p>
+                <p class="font-caudex text-white text-xl lg:text-2xl">Solution</p>
 
-                <p class="gt-deats lg:my-10">
+                <p class="font-sf text-primary text-sm lg:my-10">
                     After the problem discovery and validation using these research methods, I start creating solutions
                     for
                     the problems,
@@ -233,7 +237,7 @@
                     with a compilation of problems I will be solving in this design.
                 </p>
 
-                <ol class="list-decimal gt-deats lg:ml-5">
+                <ol class="list-decimal ml-4 font-sf text-primary text-sm lg:ml-5">
                     <li>Create a seamless onboarding process.</li>
                     <li>Create a well-prepared design style guide for future expansion.</li>
                     <li>Give users intuitive home screens that make the app learnable.</li>
@@ -243,9 +247,9 @@
             </div>
 
             <div class="user-flow lg:my-40">
-                <p class="font-caudex text-white text-2xl">User flow</p>
+                <p class="font-caudex text-white text-xl lg:text-2xl">User flow</p>
 
-                <p class="gt-deats lg:mt-10 lg:mb-7">
+                <p class="font-sf text-primary text-sm lg:mt-10 lg:mb-7">
                     To better the experience, I will be working on creating simpler flows for the onboarding, major
                     features, and other
                     hidden features that could be helpful for users. By creating simple user flows, I will be able to
@@ -255,7 +259,7 @@
 
                 <img src="../assets/images/userflow 1.png" alt="">
 
-                <p class="gt-deats lg:my-7">
+                <p class="font-sf text-primary text-sm lg:my-7">
                     After creating the information architecture for the app, I was able to narrow down the flows and
                     core
                     features for the
@@ -266,9 +270,9 @@
             </div>
 
             <div class="sketches">
-                <p class="font-caudex text-white text-2xl">Sketches</p>
+                <p class="font-caudex text-white text-xl lg:text-2xl">Sketches</p>
 
-                <p class="gt-deats lg:mt-10 lg:mb-7">
+                <p class="font-sf text-primary text-sm lg:mt-10 lg:mb-7">
                     After completing the finished designing the user flow, I make sketches on the app interface on
                     paper,
                     creating a
@@ -279,9 +283,9 @@
             </div>
 
             <div class="wireframes lg:my-40">
-                <p class="font-caudex text-white text-2xl">Wireframes</p>
+                <p class="font-caudex text-white text-xl lg:text-2xl">Wireframes</p>
 
-                <p class="gt-deats lg:mt-10 lg:mb-7">
+                <p class="font-sf text-primary text-sm lg:mt-10 lg:mb-7">
                     Wireframes help me focus on key functions, elements, and actions before starting the visual design.
                     I
                     created
@@ -292,9 +296,9 @@
             </div>
 
             <div class="visual-design">
-                <p class="font-caudex text-white text-2xl">Visual Design</p>
+                <p class="font-caudex text-white text-xl lg:text-2xl">Visual Design</p>
 
-                <p class="gt-deats lg:mt-10 lg:mb-7">
+                <p class="font-sf text-primary text-sm lg:mt-10 lg:mb-7">
                     Designing the visuals became very interesting after being able to validate the wireframes with
                     potential
                     testers of the
@@ -305,9 +309,9 @@
             </div>
 
             <div class="splash-screen lg:my-40">
-                <p class="font-caudex text-white text-2xl">Splashscreen</p>
+                <p class="font-caudex text-white text-xl lg:text-2xl">Splashscreen</p>
 
-                <p class="gt-deats lg:mt-10 lg:mb-7">
+                <p class="font-sf text-primary text-sm lg:mt-10 lg:mb-7">
                     Making a bank application friendlier would most likely improve users' trust in the application, as
                     the
                     app is perceived
@@ -318,9 +322,9 @@
             </div>
 
             <div class="onboarding">
-                <p class="font-caudex text-white text-2xl">Onboarding</p>
+                <p class="font-caudex text-white text-xl lg:text-2xl">Onboarding</p>
 
-                <p class="gt-deats lg:mt-10 lg:mb-7">
+                <p class="font-sf text-primary text-sm lg:mt-10 lg:mb-7">
                     The onboarding process on the app was a pain as forms were confusing and mostly leaves the users
                     clueless on what
                     direction to take. So we focused on improving that experience by providing conventional flows and
@@ -334,9 +338,9 @@
 
             <div class="navigation-and -homepage grid grid-cols-2 lg:my-40">
                 <div class="texts lg:pr-10">
-                    <p class="font-caudex text-white text-2xl">Navigation and Home page</p>
+                    <p class="font-caudex text-white text-xl lg:text-2xl">Navigation and Home page</p>
 
-                    <p class="gt-deats lg:my-8">
+                    <p class="font-sf text-primary text-sm lg:my-8">
                         The existing homepage design on the app was full of clusters of unused items and confusing app
                         navigation. This was
                         highlighted to be one of the app's pain points as users were unable to locate key features
@@ -353,9 +357,9 @@
             </div>
 
             <div class="error-handling">
-                <p class="font-caudex text-white text-2xl">Error handling</p>
+                <p class="font-caudex text-white text-xl lg:text-2xl">Error handling</p>
 
-                <p class="gt-deats lg:mt-10 lg:mb-7">
+                <p class="font-sf text-primary text-sm lg:mt-10 lg:mb-7">
                     Several times when using the app there tends to be situations when the app suddenly stops working
                     and
                     users don't know
@@ -369,9 +373,9 @@
             </div>
 
             <div class="splash-screen lg:my-40">
-                <p class="font-caudex text-white text-2xl">Better Visual Design</p>
+                <p class="font-caudex text-white text-xl lg:text-2xl">Better Visual Design</p>
 
-                <p class="gt-deats lg:mt-10 lg:mb-7">
+                <p class="font-sf text-primary text-sm lg:mt-10 lg:mb-7">
                     Many other parts of the UI got redesigned as one of the goal is to give a full visual redesign of
                     the
                     app.
@@ -381,9 +385,9 @@
             </div>
 
             <div class="conclusion lg:mb-40">
-                <p class="font-caudex text-white text-2xl">Conclusion</p>
+                <p class="font-caudex text-white text-xl lg:text-2xl">Conclusion</p>
 
-                <p class="gt-deats lg:my-8">
+                <p class="font-sf text-primary text-sm lg:my-8">
                     The focus of this redesign was centered around delivering an all-new experience on the GTBank
                     application. Based on the
                     research and feedback I had gathered, it was certain that the UI of the app was one of the major
@@ -399,7 +403,7 @@
                     after testing the design out with some users
                 </p>
 
-                <p class="gt-deats lg:mt-8">
+                <p class="font-sf text-primary text-sm lg:mt-8">
                     I am happy I was able to work on a project like this, I enjoyed every brainstorming session I had
                     with
                     my partner on
@@ -409,7 +413,7 @@
                     feedback throughout the entire design process.
                 </p>
 
-                <p class="gt-deats lg:mt-10">
+                <p class="font-sf text-primary text-sm lg:mt-10">
                     I would love to work on a web version of the GTBank app as that as well needs a total revamp.
                 </p>
             </div>
