--- a/src/jumiar.html
+++ b/src/jumiar.html
@@ -257,7 +257,8 @@
                 </div>
 
                 <div class="further-visual-design-image">
-                    <a href="../assets/images/gt visual design single.png"><img src="../assets/images/gt visual design single.png" alt=""></a>
+                    <a href="../assets/images/gt visual design single.png"><img
+                            src="../assets/images/gt visual design single.png" alt=""></a>
                 </div>
             </div>
 
@@ -278,8 +279,10 @@
                 </p>
 
                 <div class="grid grid-cols-2 gap-x-2 lg:gap-x-10 lg:mt-14">
-                    <a href="../assets/images/search screen 1.png"><img src="../assets/images/search screen 1.png" alt=""></a>
-                    <a href="../assets/images/search screen 2.png"><img src="../assets/images/search screen 2.png" alt=""></a>
+                    <a href="../assets/images/search screen 1.png"><img src="../assets/images/search screen 1.png"
+                            alt=""></a>
+                    <a href="../assets/images/search screen 2.png"><img src="../assets/images/search screen 2.png"
+                            alt=""></a>
                 </div>
             </div>
 
@@ -380,13 +383,14 @@
                 </div>
 
                 <div class="contacts font-sf lg:w-2/4 text-white text-xs">
-                    <div class="grid grid-cols-4 gap-y-3 text-xs lg:text-base items-center">
-                        <a class="instagram-footer-link" href="#">Instagram</a>
-                        <a class="youtube-footer-link" href="#">Youtube</a>
-                        <a class="dribble-footer-link" href="#">Dribble</a>
-                        <a class="linkedin-footer-link" href="#">LinkedIn</a>
-                        <a class="behance-footer-link" href="#">Behance</a>
-                        <a class="twitter-footer-link" href="#">Twitter</a>
+                    <div>
+                        <ul class="grid grid-cols-4 gap-y-3 text-xs lg:text-base items-center">
+                            <a class="instagram-footer-link" href="#">Instagram</a>
+                            <a class="youtube-footer-link" href="#">Youtube</a>
+                            <a class="dribble-footer-link" href="#">Dribble</a>
+                            <a class="linkedin-footer-link" href="#">LinkedIn</a>
+                            <a class="behance-footer-link" href="#">Behance</a>
+                            <a class="twitter-footer-link" href="#">Twitter</a>
                         </ul>
                     </div>
                 </div>
@@ -406,5 +410,4 @@
     <script type="module" src="js/index.js"></script>
 
 </body>
-
 </html>
