--- a/src/crptly.html
+++ b/src/crptly.html
@@ -71,129 +71,55 @@
             </div>
         </section>
 
-        <section class="gtworld mt-10">
-            <div class="about-gtbank space-y-5">
-                <a href="../assets/images/welcome image.png"><img src="../assets/images/welcome image.png" alt=""></a>
-
-                <p class="about-gtworld-header-text font-caudex text-white text-xl lg:text-2xl lg:py-10">About GTBank
+        <section class="crptly mt-10">
+            <div class="overview space-y-5">
+                <p class="overview-header-text font-caudex text-white text-xl lg:text-2xl lg:py-10">
+                    Overview
                 </p>
 
-                <p class="about-gtworld-details-text font-sf text-primary text-sm">
-                    The bank’s reliable conveyance of innovative financial arrangements and excellent client support has
-                    empowered it to
-                    record yearly development in the number of customers and key financial files since the beginning.
-                    Due to
-                    the major age
-                    group using this bank, many are committed to using the mobile service option, including the USSD
-                    code
-                    and the available
-                    mobile application. Although the bank has released different versions of the mobile application on
-                    the
-                    app store, many
-                    issues have continually been raised over the inefficiency of the application and its difficulty to
-                    use,
-                    which forces
-                    users to revert to the less sophisticated means of performing transactions. Over time, I have had
-                    many
-                    issues where I
-                    cannot perform basic tasks like making cash transfers or buying airtime and eventually had to use
-                    the
-                    USSD code for
-                    transactions.
+                <p class="overview-details-text font-sf text-primary text-sm">
+                    Cryptly is a platform that allows users to buy, convert, invest money, conduct payments, and get the
+                    latest market
+                    statistic even for unbanked people from third world countries. Cryptly aims to make transactions
+                    very seamless, fast,
+                    reliable and hassle-free and secure for all its users by providing easy onboarding, current market
+                    statistics, price
+                    update tracking, investment education and clear text information.
                 </p>
 
-                <p class="about-gtworld-details-text font-sf text-primary text-sm lg:mt-10">
-                    Gtbank today is one of the top 5 banks in Nigeria and undoubtedly has the largest youth
-                    concentration in
-                    Nigeria and one
-                    of the biggest African banks. The bank operates on a total asset value worth 3.287 Trillion Naira
-                    and a
-                    Shareholders
-                    support worth 575.6 Billion Naira and has more than 10,000 workers. Due to these challenges
-                    experienced
-                    by me and many
-                    other youths, I decided to rethink the entire experience of the app and create solutions to these
-                    problems. I will be
-                    using the GTWorld app as a case study for this purpose.
+                <p class="overview-details-text font-sf text-primary text-sm lg:mt-10">
+                    Cryptly also aims to solve daily user experience issues experienced on many blockchain platforms.
                 </p>
             </div>
 
-            <div class="dicovering-the-problem mt-24 space-y-5">
-                <p class="dicovering-the-problem-header-text font-caudex text-white text-xl lg:text-2xl">Descovering the
-                    problem</p>
+            <div class="the-problem mt-24 space-y-5">
+                <p class="the-problem-header-text font-caudex text-white text-xl lg:text-2xl">
+                    The problem
+                </p>
 
-                <p class="discovering-the-problem-details-text font-sf text-primary text-sm lg:mt-10">
-                    A user-friendly app is meant to be learnable with the smallest effort invested, unfortunately, the
-                    GTWorld app is a bit
-                    difficult to use, especially when looking for new features to explore. While I was using the app, I
-                    experienced some
-                    glitches without understanding why and many other people have highlighted similar challenges as
-                    well.
-                    Meanwhile, I also
-                    needed to hear from other mobile app users to understand what pain points others are experiencing. I
-                    scheduled meetings
-                    with some users to ask about their experiences and watch them use the app. Some of the issues that
-                    were
-                    repeatedly
-                    reported by users are listed below:
+                <p class="the-problem-details-text font-sf text-primary text-sm lg:mt-10">
+                    During my research, I discovered that crypto wallet users have need of this few functionalities
+                    majorly, this includes:
+                    the wallet balance (portfolio), transaction history, sending and receiveing of currencies, and the
+                    wallet backup
+                    feature. After testing on about 5 different crypto wallets, I was able to validate some major pain
+                    points such as,
+                    inability to keep up with losses or gain in actual fiat value, too many features on the apps and
+                    many things too complex
+                    to understand by new cryptocurrency users.
+                </p>
+
+                <p class="pain-points-header-text font-caudex text-white text-lg lg:text-2xl">
+                    Pain points for users on other platforms
                 </p>
 
                 <ol class="list-decimal ml-4 font-sf text-primary text-sm lg:mt-10 lg:ml-5">
-                    <li>Increased volume of transactional errors.</li>
-                    <li>The app goes blank and that gets users confused.</li>
-                    <li>Navigating around the app is tasking.</li>
-                    <li>DSeveral complain about airtime purchase issues.</li>
-                    <li>Lack of proper error feedback</li>
-                    <li>Other issues include Typography, colors and visual hierarchy</li>
+                    <li>Non-educational onboarding process.</li>
+                    <li>Difficulty in account recovery.</li>
+                    <li>Difficulty in tracking portfolio.</li>
+                    <li>Error handling and feedbacks.</li>
+                    <li>Too many complex features.</li>
                 </ol>
-
-                <p class="customer-reviews-header-text font-caudex text-white text-lg pt-5 lg:mt-10">
-                    Here are some customer reviews on the Google app store
-                </p>
-
-                <div class="customer-reviews-image">
-                    <a href="../assets/images/customer reviews.png"><img class="lg:my-7"
-                            src="../assets/images/customer reviews.png" alt=""></a>
-                </div>
-
-                <p class="in-addition-text font-sf text-primary text-sm">
-                    In addition to this, I also set simple tasks for the users to perform to know if they will be able
-                    to
-                    seamlessly perform
-                    those tasks, I studied their reactions to validate whatever challenges they may have experienced
-                    while
-                    using
-                    the app. I
-                    discovered these pain points during the course of the interview.
-                </p>
-
-                <ol class="list-decimal ml-4 font-sf text-primary text-sm lg:my-10 lg:ml-5">
-                    <li>Users had to pause once they are successfully logged in to find menu options despite using the
-                        application before.</li>
-                    <li>Users reportedly conmplained about some part of the app going blank whenever you click on text
-                        fields.
-                    </li>
-                    <li>The payment page doesn't seem to be intuitive</li>
-                </ol>
-
-                <p class="further-addition-text font-sf text-primary text-sm">
-                    To further validate my research, I went on to the google play store app to check out what users of
-                    the
-                    app
-                    had to say
-                    about their experiences.
-                </p>
-            </div>
-
-            <div class="solution mt-24 space-y-5">
-                <p class="solution-header-text font-caudex text-white text-xl lg:text-2xl">The Solution</p>
-
-                <p class="solution-details-text font-sf text-primary text-sm lg:my-10">
-                    Cryptly was designed to provide simple user experience to it’s users by creating an experience the
-                    unschooled can have
-                    access to and use conviniently by simplifying every process from the onboarding to making
-                    transactions.
-                </p>
             </div>
 
             <div class="goals mt-24 space-y-5">
@@ -208,12 +134,37 @@
                 </ol>
             </div>
 
+            <div class="solution mt-24 space-y-5">
+                <p class="solution-header-text font-caudex text-white text-xl lg:text-2xl">The Solution</p>
+
+                <p class="solution-details-text font-sf text-primary text-sm lg:my-10">
+                    Cryptly was designed to provide simple user experience to it’s users by creating an experience the
+                    unschooled can have
+                    access to and use conviniently by simplifying every process from the onboarding to making
+                    transactions.
+                </p>
+            </div>
+
             <div class="design-process mt-24 space-y-5">
                 <p class="design-process-header-text font-caudex text-white text-xl lg:text-2xl">Design process</p>
 
                 <div class="design-process-image">
                     <a href="../assets/images/design process.png"><img src="../assets/images/design process.png" alt=""
                             class="lg:mt-8"></a>
+                </div>
+            </div>
+
+            <div class="swot-analysis mt-24 space-y-5">
+                <p class="swot-analysis-header-text font-caudex text-white text-xl lg:text-2xl">SWOT analysis</p>
+
+                <p class="swot-analysis-details-text font-sf text-primary text-sm lg:mt-10 lg:mb-7">
+                    I researched on different wallet apps and found out those who seem to be offering the same solution
+                    Cryptly. The aim of
+                    this is to pull out useful learnings that could help me build an even better product.
+                </p>
+
+                <div class="swot-analysis-image">
+                    <a href="../assets/images/userflow 1.png"><img src="../assets/images/userflow 1.png" alt=""></a>
                 </div>
             </div>
 
